--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -42,7 +42,7 @@ jobs:
             json
             gitignore
           # Configure that a scope must always be provided.
-          subjectPattern: ^[A-Z].+$
+          subjectPattern: ^[A-Za-z].+$
           # If `subjectPattern` is configured, you can use this property to override
           # the default error message that is shown when the pattern doesn't match.
           # The variables `subject` and `title` can be used within the message.
